--- a/app/dependencies/metro/jquery.mobile.metro.theme.css
+++ b/app/dependencies/metro/jquery.mobile.metro.theme.css
@@ -2344,6 +2344,7 @@ textarea.ui-input-text[disabled="disabled"]{
 }
 
 /* orientation adjustments - incomplete!*/
+/*
 @media all and (min-width: 450px){
 	.ui-field-contain label.ui-input-text  { vertical-align: top; display: inline-block;  width: 20%;  margin: 0 2% 0 0 }
 	.ui-field-contain input.ui-input-text, 
@@ -2353,8 +2354,9 @@ textarea.ui-input-text[disabled="disabled"]{
 	.ui-hide-label input.ui-input-text, 
 	.ui-hide-label textarea.ui-input-text, 
 	.ui-hide-label .ui-input-search { padding: .4em; width: 94%; }
-	.ui-input-search input.ui-input-text { width: 95%; /*echos rule from above*/ }
 }
+*/
+/*	.ui-input-search input.ui-input-text { width: 95%; *//*echos rule from above*//* }*/
 .ui-listview {
     margin: 0;
     counter-reset: listnumbering;
