--- a/app/partials/generation.html
+++ b/app/partials/generation.html
@@ -135,8 +135,25 @@
         <div class="ui-collapsible" data-ng-class="{'ui-collapsible-collapsed': resultCollapsed}">
             <div class="ui-collapsible-content" data-ng-class="{'ui-collapsible-content-collapsed': resultCollapsed}">
                 <div class="ui-field-contain ui-body ui-br">
-                    <label for="output" class="ui-input-text">Result:</label>
+                    <label for="output" class="ui-input-text">Password:</label>
                     <input type="text" name="output" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="result"/>
+                    <div data-ng-show="hasPreviousPassword">
+                        <br>
+                        <label for="output" class="ui-input-text">Previous Password:</label>
+                        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="showPrevious()" data-ng-hide="loadingPrevious || previousResult">
+                            <span class="ui-btn-inner ui-btn-corner-all">
+                                <span class="ui-btn-text">
+                                    Show
+                                </span>
+                            </span>
+                        </a>
+                        <div data-ng-show="previousResult">
+                            <input type="text" name="output" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="previousResult"/>
+                        </div>
+                        <div data-ng-show="loadingPrevious">
+                            <img src="img/progress-indeterminate-ring-light-small.gif"/>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
