Use web workers

--- a/app/partials/generation.html
+++ b/app/partials/generation.html
@@ -16,7 +16,7 @@
                     {{submitLabel}}
                 </span>
             </span>
-            <button class="ui-btn-hidden" data-ng-click="generate()">
+            <button id="generate" class="ui-btn-hidden" data-ng-click="generate()">
                 {{submitLabel}}
             </button>
         </div>
