--- a/app/partials/unlock.html
+++ b/app/partials/unlock.html
@@ -9,7 +9,7 @@
             <input type="password" name="master" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="masterPassword"/>
         </div>
         <div data-ng-show="error">{{errorMessage}}</div>
-        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="next()" data-ng-hide="loading">
+        <a id="next" class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="next()" data-ng-hide="loading">
             <span class="ui-btn-inner ui-btn-corner-all">
                 <span class="ui-btn-text">
                     Next
