Provide a way to reset storage URL

--- a/app/partials/unlock.html
+++ b/app/partials/unlock.html
@@ -16,6 +16,13 @@
                 </span>
             </span>
         </a>
+        <a id="reset" class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="reset()" data-ng-hide="loading">
+            <span class="ui-btn-inner ui-btn-corner-all">
+                <span class="ui-btn-text">
+                    Reset
+                </span>
+            </span>
+        </a>
         <img src="img/progress-indeterminate-ring-light-small.gif" data-ng-show="loading"/>
     </div>
 </div>
