--- a/app/partials/generation.html
+++ b/app/partials/generation.html
@@ -6,7 +6,7 @@
     <div class="ui-content ui-body-b">
         <div class="ui-field-contain ui-body ui-br">
             <label for="param" class="ui-input-text">Parameter:</label>
-            <input type="text" name="param" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="param"/>
+            <input type="text" autocorrect="off" autocapitalize="off" name="param" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="param"/>
         </div>
 
         <br/>
@@ -36,7 +36,7 @@
             <div class="ui-collapsible-content" data-ng-class="{'ui-collapsible-content-collapsed': configCollapsed}">
                 <div class="ui-field-contain ui-body ui-br">
                     <label for="notes" class="ui-input-text">Notes:</label>
-                    <input type="text" name="notes" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="notes"/>
+                    <input type="text" name="notes" value="" autocorrect="off" autocapitalize="off" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="notes"/>
                 </div>
 
                 <div class="ui-field-contain ui-body ui-br">
@@ -136,7 +136,7 @@
             <div class="ui-collapsible-content" data-ng-class="{'ui-collapsible-content-collapsed': resultCollapsed}">
                 <div class="ui-field-contain ui-body ui-br">
                     <label for="output" class="ui-input-text">Password:</label>
-                    <input type="text" name="output" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="result"/>
+                    <input type="text" name="output" value="" autocorrect="off" autocapitalize="off" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="result"/>
                     <div data-ng-show="hasPreviousPassword">
                         <br>
                         <label for="output" class="ui-input-text">Previous Password:</label>
@@ -148,7 +148,7 @@
                             </span>
                         </a>
                         <div data-ng-show="previousResult">
-                            <input type="text" name="output" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="previousResult"/>
+                            <input type="text" name="output" value="" autocorrect="off" autocapitalize="off" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="previousResult"/>
                         </div>
                         <div data-ng-show="loadingPrevious">
                             <img src="img/progress-indeterminate-ring-light-small.gif"/>
