--- a/app/partials/setup.html
+++ b/app/partials/setup.html
@@ -10,7 +10,7 @@
         </div>
         <div class="ui-field-contain ui-body ui-br">
             <label class="ui-input-text">Storage URL:</label>
-            <input type="text" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="storageUrl"/>
+            <input type="text" value="" autocorrect="off" autocapitalize="off" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="storageUrl"/>
         </div>
         <div data-ng-show="error">{{errorMessage}}</div>
         <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="cancel()" data-ng-hide="firstTime || loading">
