--- a/app/partials/test.html
+++ b/app/partials/test.html
@@ -6,7 +6,7 @@
     <div class="ui-content ui-body-b">
         <div class="ui-field-contain ui-body ui-br">
             <label style="width:100%" for="master" class="ui-input-text">Number of iterations:</label>
-            <input type="text" name="master" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="iterations"/>
+            <input type="text" name="master" value="" autocorrect="off" autocapitalize="off" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="iterations"/>
         </div>
         <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="test()" data-ng-hide="loading">
             <span class="ui-btn-inner ui-btn-corner-all">
