Implement ability to remove mapping

--- a/app/partials/generation.html
+++ b/app/partials/generation.html
@@ -122,7 +122,7 @@
                         </span>
                     </span>
                 </a>
-                <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="mapping()">
+                <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="mapping()" data-ng-show="params.length > 0">
                     <span class="ui-btn-inner ui-btn-corner-all">
                         <span class="ui-btn-text">
                             Mapping
