Allow multi-line notes

--- a/app/partials/generation.html
+++ b/app/partials/generation.html
@@ -36,7 +36,8 @@
             <div class="ui-collapsible-content" data-ng-class="{'ui-collapsible-content-collapsed': configCollapsed}">
                 <div class="ui-field-contain ui-body ui-br">
                     <label for="notes" class="ui-input-text">Notes:</label>
-                    <input type="text" name="notes" value="" autocorrect="off" autocapitalize="off" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="notes"/>
+                    <textarea type="text" name="notes" value="" autocorrect="off" autocapitalize="off" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="notes">
+                    </textarea>
                 </div>
 
                 <div class="ui-field-contain ui-body ui-br">
