Fix height for <select>

--- a/app/dependencies/metro/jquery.mobile.metro.theme.css
+++ b/app/dependencies/metro/jquery.mobile.metro.theme.css
@@ -2195,6 +2195,7 @@ Dropbox
     font-weight: normal;
     margin: 0px;
     height: 32px;
+    padding-top: 0.3em;
 }
 
 .ui-select .ui-btn.ui-disabled{
