Add ability to remove config

--- a/app/partials/generation.html
+++ b/app/partials/generation.html
@@ -130,6 +130,13 @@
                         </span>
                     </span>
                 </a>
+                <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="all()" data-ng-show="params.length > 0">
+                    <span class="ui-btn-inner ui-btn-corner-all">
+                        <span class="ui-btn-text">
+                            All Passwords
+                        </span>
+                    </span>
+                </a>
             </div>
         </div>
 
