More fixes related to drop-down conversion

--- a/app/partials/generation.html
+++ b/app/partials/generation.html
@@ -9,12 +9,12 @@
             <div class="ui-select">
                 <div class="ui-btn ui-btn-up-b ui-shadow ui-btn-corner-all ui-fullsize ui-btn-block ui-btn-icon-right">
                     <span class="ui-btn-inner ui-btn-corner-all">
-                        <span class="ui-btn-text">{{param || '-- add new --'}}</span>
+                        <span class="ui-btn-text">{{param ? param.display : '-- add new --'}}</span>
                         <span class="ui-icon ui-icon-arrow-d ui-icon-shadow">
                         </span>
                     </span>
 
-                    <select data-ng-model="param" data-ng-options="param for param in params">
+                    <select data-ng-model="param" data-ng-options="param.display for param in params">
                         <option value="">-- add new --</option>
                     </select>
                 </div>
