--- a/app/css/app.css
+++ b/app/css/app.css
@@ -77,3 +77,11 @@ body {
     border: 0px;
     font-weight: normal;
 }
+
+.ui-checkbox {
+    width: 100%;
+}
+
+.ui-checkbox .nowrap {
+    white-space: nowrap;
+}
