--- a/app/partials/generation.html
+++ b/app/partials/generation.html
@@ -160,6 +160,24 @@
                     <div data-ng-show="hasPreviousPassword">
                         <br>
                         <label for="output" class="ui-input-text">Previous Password:</label>
+
+                        <div class="ui-field-contain ui-body ui-br" data-ng-hide="useDifferentPreviousMasterPassword || loadingPrevious || previousResult">
+                            <fieldset class="ui-corner-all ui-controlgroup ui-controlgroup-horizontal">
+                                <div class="ui-controlgroup-controls">
+                                    <div class="ui-checkbox">
+                                        <input name="checkbox-6" id="checkbox-6" class="custom" type="checkbox" data-ng-modal="useDifferentPreviousMasterPassword">
+                                        <label class="ui-btn ui-corner-left ui-checkbox-off ui-btn-up-b" for="checkbox-6" data-ng-click="toggleUseDifferentPreviousMasterPassword()">
+                                            <div class="ui-btn-inner ui-corner-left">
+                                                <span class="ui-btn-text nowrap" style="white-space:nowrap">Different Master Password?</span>
+                                            </div>
+                                        </label>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </div>
+        
+                        <input type="password" value="" class="ui-input-text ui-body-b ui-corner-all ui-shadow-inset" metro-text-field="" data-ng-model="previousMasterPassword" data-ng-show="useDifferentPreviousMasterPassword && !(loadingPrevious || previousResult)"/>
+
                         <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="showPrevious()" data-ng-hide="loadingPrevious || previousResult">
                             <span class="ui-btn-inner ui-btn-corner-all">
                                 <span class="ui-btn-text">
