--- a/app/partials/all.html
+++ b/app/partials/all.html
@@ -26,7 +26,17 @@
                 </span>
             </span>
         </a>
-        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="remove()" data-ng-hide="loading">
+        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="remove()" data-ng-hide="loading || confirming">
+            <span class="ui-btn-inner ui-btn-corner-all">
+                <span class="ui-btn-text">
+                    Remove
+                </span>
+            </span>
+        </a>
+        <div class="ui-field-contain ui-body ui-br" data-ng-show="confirming">
+            <label for="param" class="select ui-select">Confirm Removal:</label>
+        </div>
+        <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="confirmRemove()" data-ng-show="confirming && !loading">
             <span class="ui-btn-inner ui-btn-corner-all">
                 <span class="ui-btn-text">
                     Remove
