--- a/app/partials/mapping.html
+++ b/app/partials/mapping.html
@@ -63,7 +63,17 @@
             </div>
 
             <div data-ng-show="remove_error">{{remove_errorMessage}}</div>
-            <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="remove()" data-ng-hide="remove_loading">
+            <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="remove()" data-ng-hide="remove_loading || confirming">
+                <span class="ui-btn-inner ui-btn-corner-all">
+                    <span class="ui-btn-text">
+                        Remove
+                    </span>
+                </span>
+            </a>
+            <div class="ui-field-contain ui-body ui-br" data-ng-show="confirming">
+                <label for="param" class="select ui-select">Confirm Removal:</label>
+            </div>
+            <a class="ui-btn ui-btn-inline ui-shadow ui-btn-corner-all ui-btn-up-b" disable-link="" data-ng-click="confirmRemove()" data-ng-show="confirming && !remove_loading">
                 <span class="ui-btn-inner ui-btn-corner-all">
                     <span class="ui-btn-text">
                         Remove
