Camel case all things

--- a/app/partials/all.html
+++ b/app/partials/all.html
@@ -9,12 +9,12 @@
             <div class="ui-select">
                 <div class="ui-btn ui-btn-up-b ui-shadow ui-btn-corner-all ui-fullsize ui-btn-block ui-btn-icon-right">
                     <span class="ui-btn-inner ui-btn-corner-all">
-                        <span class="ui-btn-text">{{selected_param.display}}</span>
+                        <span class="ui-btn-text">{{selectedParam.display}}</span>
                         <span class="ui-icon ui-icon-arrow-d ui-icon-shadow">
                         </span>
                     </span>
 
-                    <select data-ng-model="selected_param" data-ng-options="param.display for param in params"></select>
+                    <select data-ng-model="selectedParam" data-ng-options="param.display for param in params"></select>
                 </div>
             </div>
         </div>
